@@ -23,6 +23,10 @@ Unreleased, experimental changes
     An access to uninitalized data has been fixed.
     (Thanks to Jörg Richter for reporting the problem.)
 
+  Changes affecting build procedure
+
+    'make check' now checks better for properly-sorted data.
+
   Changes affecting documentation and commentary
 
     zdump -c's treatment of years is now documented to use the
